--- a/index.html
+++ b/index.html
@@ -1,79 +1,73 @@
 <!DOCTYPE html>
+
 <html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Ios200 : " />
-
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="iOS100 : Course Materials">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ios200</title>
-  </head>
+    <title>Welcome to iOS200!</title>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/arod2634/ios200">View on GitHub</a>
+<div id="header_wrap" class="outer">
+    <header class="inner">
+        <a id="forkme_banner" href="https://github.com/arod2634/iOS200">View on GitHub</a>
 
-          <h1 id="project_title">Ios200</h1>
-          <h2 id="project_tagline"></h2>
+        <h1 id="project_title">iOS100</h1>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/arod2634/ios200/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/arod2634/ios200/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <h2 id="project_tagline">Course Materials</h2>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <section id="downloads"><a class="zip_download_link" href="https://github.com/arod2634/iOS200/zipball/master">Download this project as a .zip file</a> <a class="tar_download_link" href="https://github.com/arod2634/iOS100/tarball/master">Download this project as a tar.gz file</a></section>
+    </header>
+</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+        <h2><a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"></a>Welcome to iOS200</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <p>In this course student further their knowledge of how to develop and deploy applications for the Apple iPhone, iPad, and iPod touch using iOS SDK and the Xcode Integrated Development Environment. The course will guide students in developing applications for the iOS platform and further knowledge of the Objective-C language and existing constructs that are used in typical application development. Other topics include Data Management, Table Views, iPhone Navigation Controls, Accelerometer, the Camera and Movie Player and how to handle Touch Events.</p>
+        <p><strong>Prerequisites:</strong> iOS Platform Development – Introduction (iOS100)</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <p>For more information contact: <a href="mailto:info@workforcecenter.slu.edu?subject=iOS100 Course Inquiry" target="_blank">info@workforcecenter.slu.edu</a> or <a href="tel:3149773226" target="_blank">314-977-3226</a></p>
+        <hr>
+        <p>Below you will find all of the materials needed to get you though the course.</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <ul>
+            <li><a href="https://register.workforcecenter.slu.edu/dev_students.asp?action=coursedetail&id=4338&main=Mobile+Development&sub1=iOS&misc=160&courseinternalaccesscode=&coursetype=0" target="_blank">Course Registration</a></li>
+            <li><a href="http://www.amazon.com/iOS-Programming-Ranch-Edition-Guides/dp/0321942051" target="_blank">Course Textbook</a></li>
+            <!--<li><a href="https://www.dropbox.com/s/0nzkedse0jjpw6q/ios100p1.html" target="_blank">Course Handout</a></li>-->
+            <li>Course Slides:
+                <ul>
+                    <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Day 1</a></li>
+                </ul>
+            </li>
+            <li>Course Exercises:
+                <ul>
+                    <li><a href="http://slid.es/alexrodriguez/ios200-exercise-1" target="_blank">Exercise 1</a></li>
+                </ul>
+            </li>
+        </ul>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+    </section>
+</div>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<div id="footer_wrap" class="outer">
+    <footer class="inner">
+        <p class="copyright">iOS100 maintained by <a href="https://github.com/arod2634">arod2634</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Ios200 maintained by <a href="https://github.com/arod2634">arod2634</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+    </footer>
+</div><script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+    try {
+        var pageTracker = _gat._getTracker("UA-48095263-1");
+        pageTracker._trackPageview();
+    } catch(err) {}
+</script>
+</body>
 </html>
