Added Exercise 1 and Solution

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </li>
             <li>Course Exercises:
                 <ul>
-                    <li><a href="http://slid.es/alexrodriguez/ios200-exercise-1" target="_blank">Exercise 1</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise 1</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise 1 Solution</a></li>
                 </ul>
             </li>
         </ul>
