--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
         <ul>
             <li><a href="https://register.workforcecenter.slu.edu/dev_students.asp?action=coursedetail&id=4338&main=Mobile+Development&sub1=iOS&misc=160&courseinternalaccesscode=&coursetype=0" target="_blank">Course Registration</a></li>
             <li><a href="http://www.amazon.com/iOS-Programming-Ranch-Edition-Guides/dp/0321942051" target="_blank">Course Textbook</a></li>
-            <!--<li><a href="https://www.dropbox.com/s/0nzkedse0jjpw6q/ios100p1.html" target="_blank">Course Handout</a></li>-->
             <li>Course Slides:
                 <ul>
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Day 1</a></li>
+                    <li><a href="https://slid.es/alexrodriguez/ios200-day-2" target="_blank">Day 2</a></li>
                 </ul>
             </li>
             <li>Course Exercises:
                 <ul>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise 1</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise 1 Solution</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise 1 - DexterDelegates</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise 1 Solution - DexterDelegates</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker.zip" target="_blank">Exercise 2 - PuppyPicker</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise 2 Solution - PuppyPicker</a></li>
                 </ul>
             </li>
         </ul>
