--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <ul>
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Day 1</a></li>
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-2" target="_blank">Day 2</a></li>
+                    <li><a href="https://slid.es/alexrodriguez/ios200-day-3" target="_blank">Day 3</a></li>
                 </ul>
             </li>
             <li>Course Exercises:
@@ -50,6 +51,8 @@
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise 1 Solution - DexterDelegates</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker.zip" target="_blank">Exercise 2 - PuppyPicker</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise 2 Solution - PuppyPicker</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise 3 - PuppyPicker-Part2</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise 3 Solution - PuppyPicker-part2</a></li>
                 </ul>
             </li>
         </ul>
