--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise 1 Solution - DexterDelegates</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker.zip" target="_blank">Exercise 2 - PuppyPicker</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise 2 Solution - PuppyPicker</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise 3 - PuppyPicker-Part2</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise 3 Solution - PuppyPicker-part2</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise 3 - PuppyPicker Part 2</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise 3 Solution - PuppyPicker Part 2</a></li>
                 </ul>
             </li>
         </ul>
