Updated class homepage with day 4 materials

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <section id="main_content" class="inner">
         <h2><a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"></a>Welcome to iOS200</h2>
 
-        <p>In this course student further their knowledge of how to develop and deploy applications for the Apple iPhone, iPad, and iPod touch using iOS SDK and the Xcode Integrated Development Environment. The course will guide students in developing applications for the iOS platform and further knowledge of the Objective-C language and existing constructs that are used in typical application development. Other topics include Data Management, Table Views, iPhone Navigation Controls, Accelerometer, the Camera and Movie Player and how to handle Touch Events.</p>
+        <p>In this course student further their knowledge of how to develop and deploy applications for the Apple iPhone, iPad, and iPod touch using iOS SDK and the Xcode Integrated Development Environment. The course will guide students in developing applications for the iOS platform and further knowledge of the Objective-C language and existing constructs that are used in typical application development. Other topics include Data Management, Table Views, iPhone Navigation Controls, the Camera and Gesture Recognizers.</p>
         <p><strong>Prerequisites:</strong> iOS Platform Development – Introduction (iOS100)</p>
 
-        <p>For more information contact: <a href="mailto:info@workforcecenter.slu.edu?subject=iOS100 Course Inquiry" target="_blank">info@workforcecenter.slu.edu</a> or <a href="tel:3149773226" target="_blank">314-977-3226</a></p>
+        <p>For more information contact: <a href="mailto:info@workforcecenter.slu.edu?subject=iOS200 Course Inquiry" target="_blank">info@workforcecenter.slu.edu</a> or <a href="tel:3149773226" target="_blank">314-977-3226</a></p>
         <hr>
         <p>Below you will find all of the materials needed to get you though the course.</p>
 
@@ -41,6 +41,7 @@
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Day 1</a></li>
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-2" target="_blank">Day 2</a></li>
                     <li><a href="https://slid.es/alexrodriguez/ios200-day-3" target="_blank">Day 3</a></li>
+                    <li><a href="https://slid.es/alexrodriguez/ios200-day-4" target="_blank">Day 4</a></li>
                 </ul>
             </li>
             <li>Course Exercises:
@@ -51,6 +52,8 @@
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise 2 Solution - PuppyPicker</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise 3 - PuppyPicker Part 2</a></li>
                     <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise 3 Solution - PuppyPicker Part 2</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part3.zip" target="_blank">Exercise 4 - PuppyPicker Part 3</a></li>
+                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part3.zip" target="_blank">Exercise 4 Solution - PuppyPicker Part 3</a></li>
                 </ul>
             </li>
         </ul>
