--- a/index.html
+++ b/index.html
@@ -36,28 +36,38 @@
         <ul>
             <li><a href="https://register.workforcecenter.slu.edu/dev_students.asp?action=coursedetail&id=4338&main=Mobile+Development&sub1=iOS&misc=160&courseinternalaccesscode=&coursetype=0" target="_blank">Course Registration</a></li>
             <li><a href="http://www.amazon.com/iOS-Programming-Ranch-Edition-Guides/dp/0321942051" target="_blank">Course Textbook</a></li>
-            <li>Course Slides:
+            <li>Course Links
                 <ul>
-                    <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Day 1</a></li>
-                    <li><a href="https://slid.es/alexrodriguez/ios200-day-2" target="_blank">Day 2</a></li>
-                    <li><a href="https://slid.es/alexrodriguez/ios200-day-3" target="_blank">Day 3</a></li>
-                    <li><a href="https://slid.es/alexrodriguez/ios200-day-4" target="_blank">Day 4</a></li>
-                </ul>
-            </li>
-            <li>Course Exercises:
-                <ul>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise 1 - DexterDelegates</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise 1 Solution - DexterDelegates</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker.zip" target="_blank">Exercise 2 - PuppyPicker</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise 2 Solution - PuppyPicker</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise 3 - PuppyPicker Part 2</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise 3 Solution - PuppyPicker Part 2</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part3.zip" target="_blank">Exercise 4 - PuppyPicker Part 3</a></li>
-                    <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part3.zip" target="_blank">Exercise 4 Solution - PuppyPicker Part 3</a></li>
+                    <li>Day 1:
+                        <ul>
+                            <li><a href="https://slid.es/alexrodriguez/ios200-day-1" target="_blank">Slides</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/DexterDelegates.zip" target="_blank">Exercise</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/solutions/DexterDelegates.zip" target="_blank">Exercise Solution</a></li>
+                        </ul>
+                    </li>
+                    <li>Day 2:
+                        <ul>
+                            <li><a href="https://slid.es/alexrodriguez/ios200-day-2" target="_blank">Slides</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker.zip" target="_blank">Exercise</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker.zip" target="_blank">Exercise Solution</a></li>
+                        </ul>
+                    </li>
+                    <li>Day 3:
+                        <ul>
+                            <li><a href="https://slid.es/alexrodriguez/ios200-day-3" target="_blank">Slides</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part2.zip" target="_blank">Exercise</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part2.zip" target="_blank">Exercise Solution</a></li>
+                        </ul>
+                    </li>
+                    <li>Day 4:
+                        <ul>
+                            <li><a href="https://slid.es/alexrodriguez/ios200-day-4" target="_blank">Slides</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part3.zip" target="_blank">Exercise</a></li>
+                            <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part3.zip" target="_blank">Exercise Solution</a></li>
+                        </ul>
                 </ul>
             </li>
         </ul>
-
     </section>
 </div>
 
