Updated Markup to be  a little cleaner?

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="http://www.amazon.com/iOS-Programming-Ranch-Edition-Guides/dp/0321942051" target="_blank">Course Textbook</a></li>
         </ul>
 
-        <strong>Course Links</strong>
+        <strong>Course Links</strong><br/>
 
         Day 1:
 
@@ -70,7 +70,7 @@
             <li><a href="https://slid.es/alexrodriguez/ios200-day-4" target="_blank">Slides</a></li>
             <li><a href="http://arod2634.github.io/ios200/exercises/PuppyPicker-Part3.zip" target="_blank">Exercise</a></li>
             <li><a href="http://arod2634.github.io/ios200/exercises/solutions/PuppyPicker-Part3.zip" target="_blank">Exercise Solution</a></li>
-        </ul>   
+        </ul>
 
     </section>
 </div>
