Updated Markup to be  a little cleaner?

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <li><a href="http://www.amazon.com/iOS-Programming-Ranch-Edition-Guides/dp/0321942051" target="_blank">Course Textbook</a></li>
         </ul>
 
-        <strong>Course Links</strong><br/>
-
+        <strong>Course Links</strong>
+        <br/><br/>
         Day 1:
 
         <ul>
